# therock-test-agent

./: .env  .env.example  .env_example  .gitignore  .gitignore.backup  0602.md  ISSUE_TEST_FAILURES.md  Makefile  README.md  a.py  check_api.py  debug-chat-no-response.md  deepagents_validator.py  index_docs_official.py  install.sh  issue.md  issue_therock-test-agent.md  langgraph.json  langgraph_complete.py  minimal_test_agent.py  pyproject.toml  pytest  requirements.txt  simple_validator.py  step1_state.py  step2_nodes.py  step3_edges.py  step4_memory.py  test_debug.py
.cursor/: mcp.json  settings.json
.github/workflows/: ci.yml
.opencode/agents/: therock-debugger.md  therock-executor.md  therock-loop.md  therock-repairer.md  therock-reporter.md
.opencode/commands/: therock-debug-round.md  therock-repair-round.md  therock-report.md  therock-resume.md  therock-run.md  therock-status.md  therock-stop.md
.opencode/tools/: detect-gpu-timeout.sh  generate-report.sh  therock_agent.sh
20260710_153107_1747ce36/: agent_activity.jsonl  environment_summary.json  global_state.json  progress.jsonl  runner.pid.json  summary_report.md  tool_calls.jsonl  wrapper_changes.jsonl
20260710_153107_1747ce36/failures/: libhipcxx_hiprtc-quick_failure_report.md  sanity-quick_failure_report.md
20260710_153107_1747ce36/sudo_askpass_bin/: sudo
20260710_153107_1747ce36/wrappers/: hiprand-quick.round1.sh  rccl-quick.round1.sh  rocfft-quick.round1.sh  rocthrust-quick.round1.sh  sanity-quick.round3.sh
20260710_190554_105b10f6/: agent_activity.jsonl  environment_summary.json  global_state.json  progress.jsonl  runner.pid.json  tool_calls.jsonl  wrapper_changes.jsonl
20260710_190554_105b10f6/failures/: hipblaslt-comprehensive_failure.json  hipblaslt-full_failure.json  hipblaslt-standard_failure.json  hipsparse-full_failure.json  libhipcxx_hipcc-comprehensive_failure.json  libhipcxx_hipcc-full_failure.json  libhipcxx_hipcc-quick_failure.json  libhipcxx_hipcc-standard_failure.json  libhipcxx_hiprtc-comprehensive_failure.json  libhipcxx_hiprtc-full_failure.json  rocalution-quick_failure.json  (+14 more)
doc/: Planning层设计.md  Tool_use层设计.md  ai_rtk内嵌设计.md  langraph概念.md  test_utility测试工具库设计.md  原始需求.md  开发指南.md
docs/: 827_ROCm安装与环境验证rocm-smi_rocminfo_amd-smi.md
docs_this_project/: ROCm_TheRock—测试test流程与设计  component_env_script_index.json  component_sort_order.json  component_sort_order_ori.json  issue.md  loop_engineering.md  official_exclude.json  opencode增强.md  sudo方案.md  参考资料.md  开发施工步骤.md  改进文档1.md  改进文档2.md  改进文档3.md  汇总测试报告.md  落地方案.md  问题模板.md  集成teams通信.md  需求.md
guide/: 00_参考资料.md  01_需求与用例.md  02_架构与工具设计.md  03_开发运行与观测.md  04_CLI开发.md  05_system_promot.md  06_官方rag.md  07_加入沙盒运行节点设计.md  08_阶段优化.md  09_promot优化.md  10_agent_ui安装.md  12_install_agent_chat_ui.md  前端问题.md
issues/: issue1.md  issue2.md  issue3.md  issue4.md  issue5_roc_blas_full.md  issue6.md  issue7.md  issue8.md  issue9.md
scripts/: fetch_rocm_issues.py  therock-sudo-agent
src/: cli copy.py  cli.py
tests/: test_e2e_cleaning.py  test_install_overlay.sh  test_therock_agent.sh
(+8310 files in other folders)
