[project]
name = "test-case-agent"
version = "0.1.0"
description = "基于 LangGraph 的智能体，自动生成 ROCm / AI Model 测试用例"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tca = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
