[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test-case-agent"
version = "0.1.0"
description = "LangGraph-based agent for generating ROCm test cases."
requires-python = ">=3.12"
dependencies = [
    "langgraph[dev]>=0.2.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-checkpoint-postgres",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
    "langfuse",
    "openai",
    "deepagents",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "langchain-mcp-adapters",
    "huggingface_hub[mcp]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]