[lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = ["E501", "B008", "B904"]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"**/__init__.py" = ["F401"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test-case-agent"
version = "0.1.0"
description = "LangGraph-based agent for generating ROCm test cases."
requires-python = ">=3.12"
dependencies = [
    "langgraph[dev]>=0.2.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-checkpoint-postgres",
    "langchain>=0.3.0",
    "langchain-huggingface",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
    "langfuse",
    "openai",
    "deepagents",
    "docker",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "langchain-mcp-adapters",
    "huggingface_hub[mcp]>=0.32.0",
    "sentence-transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["tests/output"]
addopts = "-p no:launch_testing_ros -p no:launch_testing"
markers = [
    "slow: marks tests as slow (deselect with '-m 'not slow'')",
    "integration: marks tests as integration tests",
    "llm: marks tests that require LLM API access",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
